--- a/assets/styles.css
+++ b/assets/styles.css
@@ -336,7 +336,7 @@ body {
 
 .cont {
   position: relative;
-  background-image: url("img-vl.png");
+  background-image: url("https://media.githubusercontent.com/media/Anas-elkouri/brief2_Design_Web_pour_ListoGo/refs/heads/main/assets/img-vl.png");
   height: 500px;
   width: 1700px;
   margin-top: 100px;
