--- a/assets/main.css
+++ b/assets/main.css
@@ -110,14 +110,14 @@
 
 .opt {
   display: flex;
-  margin-top: 70px;
+  margin-top: 20px;
   background: rgba(255, 255, 255, 0.8);
-  width: 900px;
+  width: 450px;
   height: 90px;
   gap: 70px;
-  border-radius: 0 20px 20px 20px;
+  border-radius: 0 20px 0px 20px;
   position: relative;
-  left: -100px;
+  left: -20px;
 }
 .option {
   padding-top: 30px;
@@ -204,46 +204,7 @@
   top: 20px;
   left: 82px;
 }
-/*consept2*/
 
-.consept2 {
-  position: relative;
-  margin-bottom: 100px;
-  margin: auto;
-  margin-top: 50px;
-  width: 100%;
-  margin-top: 100px;
-  padding: 40px 0;
-}
-
-.consept2 .head {
-  display: flex;
-  margin-left: 70px;
-  align-items: center;
-  justify-content: space-between;
-  margin-bottom: 20px;
-}
-
-.text-h3 {
-  position: absolute;
-  margin-left: 35px;
-  font-size: 25px;
-  color: #222;
-}
-
-.see-all {
-  position: absolute;
-  left: 90%;
-  text-decoration: none;
-  font-size: 20px;
-  color: #1daeff;
-}
-.see-all:hover {
-  background-color: #66c3f9;
-  color: #ffffff;
-  border-radius: 3px;
-  height: 3%;
-}
 
 /*card2*/
 
@@ -252,6 +213,7 @@
   grid-template-columns: repeat(2, 1fr);
   gap: 30px 80px;
   justify-content: center;
+  margin-top: 25px;
 }
 
 .crd {
@@ -324,63 +286,37 @@
   box-shadow: 0 10px 20px #979696;
 }
 
-/*final_card*/
 
-.find {
+/*info*/
+
+.infor{
   display: flex;
-  align-items: flex-start;
-  gap: 0;
+  justify-content: space-between;
 }
-
-.cont {
-  position: relative;
-  background-image: url("https://media.githubusercontent.com/media/Anas-elkouri/brief2_Design_Web_pour_ListoGo/refs/heads/main/assets/img-vl.png");
-  height: 500px;
-  width: 1700px;
-  margin-top: 100px;
-  margin-left: 55px;
-  padding-left: 80px;
-  padding-top: 30px;
-  margin-bottom: 50px;
-  right: 20px;
-  border-radius: 50px;
-}
-
-.cont h1 {
-  position: relative;
-  font-size: 50px;
-  bottom: -52px;
-}
-
-.cont p {
-  position: relative;
-  bottom: -80px;
-  font-size: 20px;
-  color: rgba(88, 89, 129, 1);
-}
-
-.cont button {
-  position: relative;
-  background: rgba(29, 174, 255, 1);
+.option select {
+  background-color: transparent;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  color: rgba(0, 0, 0, 0.5);
   border: none;
-  border-radius: 10px;
-  bottom: -130px;
-  height: 40px;
-  width: 170px;
-  color: whitesmoke;
+ 
 }
-.cont button:hover {
-  background-color: whitesmoke;
-  color: #007bff;
-  border: 2px solid #007bff;
+.option select:hover{
+   
+  border-bottom: 2px solid black;
 }
+
+.option option{
+  border: none;
+}
+
+
 
 /*footer*/
 
 .footer {
-  margin-top: 80px;
+  margin-top: 90px;
   display: flex;
-  margin-bottom: 25px;
+  margin-bottom: 10px;
 }
 .footer h3 {
   position: relative;
@@ -390,7 +326,7 @@
   position: absolute;
   padding-top: 1.5%;
   left: 240px;
-  top: 2965px;
+top: 2452px;
 }
 
 .fotr1 p {
